--- a/views/login.ejs
+++ b/views/login.ejs
@@ -1,19 +1,25 @@
 <!DOCTYPE html>
 <html>
 <head>
-  <title>Página de Login</title>
+  <link rel="stylesheet" type="text/css" href="styles/login.css" media="screen" />
+  <title>Login</title>
 </head>
 <body>
-  <h1>Página de Login</h1>
-
-  <form action="/login" method="post">
-    <label for="email">Nome de usuário:</label>
-    <input type="email" id="email" name="email" required>
-
-    <label for="senha">Senha:</label>
-    <input type="password" id="senha" name="senha" required>
-
-    <button type="submit">Entrar</button>
-  </form>
+  <div class="wrapper">
+    <h2>Login</h2>
+    
+    <form action="/login" method="post">
+      <div class="input-box">
+        <input type="email" placeholder="Digite seu email" id="email" name="email" required>
+      </div>
+      <div class="input-box">
+        <input type="password" placeholder="Digite sua senha" id="senha" name="senha" required>
+      </div>
+      <button type="submit">Entrar</button>
+      <div class="text">
+        <h3>Não tem uma conta? <a href="/cadastro">Registrar</a></h3>
+      </div>
+    </form>
+  </div>
 </body>
 </html>
