--- a/views/postagem.ejs
+++ b/views/postagem.ejs
@@ -1,10 +1,17 @@
 <h1>Nova Postagem</h1>
 
 <form method="POST" action="/postagem">
-    <input type="hidden" name="usuarioId" value="<%= usuarioId %>">
     <input type="hidden" name="albumId" value="<%= albumId %>">
     <label for="texto">Texto:</label>
     <textarea name="texto" id="texto" rows="4" cols="50"></textarea>
     <br>
+    <label for="classificacao">Classificação:</label>
+    <select name="classificacao" id="classificacao">
+        <option value="1">1 estrela</option>
+        <option value="2">2 estrelas</option>
+        <option value="3">3 estrelas</option>
+        <option value="4">4 estrelas</option>
+        <option value="5">5 estrelas</option>
+    </select>
     <input type="submit" value="Postar">
 </form>
