--- a/views/login.ejs
+++ b/views/login.ejs
@@ -5,9 +5,14 @@
   <title>Login</title>
 </head>
 <body>
+  
   <div class="wrapper">
     <h2>Login</h2>
-    
+    <% if (error) { %>
+      <div class="error-message">
+        <%= error %>
+      </div>
+    <% } %>
     <form action="/login" method="post">
       <div class="input-box">
         <input type="email" placeholder="Digite seu email" id="email" name="email" required>
